--- a/config/sim_config.yaml
+++ b/config/sim_config.yaml
@@ -1,9 +1,9 @@
 # Configuration file for simulation
 simulation:
-  protocol: "BB84"        # "BB84", "BBM92" or "Id-BB84"
+  protocol: "BBM92"        # "BB84", "BBM92" or "Id-BB84"
   run_sim: True           # run simulation or not
-  device: False           # use real device or not
+  device: True           # use real device or not
   QPU: "ibm_sherbrooke"   # IBMQ device
-  lengths: [1, 3, 5, 7, 9, 10, 13, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 80, 90, 100]   # list of chain lengths (distance between Alice and Bob) [15, 20, 30, 40, 50, 70, 100]
-  runs: 1000                # protocol runs per each length
+  lengths: [1, 3, 5, 7, 9, 10, 15, 20, 30, 40, 50, 60, 80, 100]   # list of chain lengths (distance between Alice and Bob) [15, 20, 30, 40, 50, 70, 100]
+  runs: 500                # protocol runs per each length
   draw: False             # whether to draw circuits during simulation or not (can be slow)
